k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventoryapp-web
  labels:
    app: inventoryapp
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: inventoryapp
    component: web
